# EcoNet_PI

./: .clang-format  CMakeLists.txt  HA_config.yaml  README.md  burning_off  clang.sh  cleaning.output  config.yaml  econet_init.hex  frame 0xe1.lab  idle.output  new frames  set frames  test.output  work.output
frames_examples/: econet_init.hex  float.hex  new frames  set frames
include/: Config_manager.h  Mosquitto.h  USB_serial.h  econet.h  vars.h
src/: Config_manager.cpp  Mosquitto.cpp  USB_serial.cpp  econet.cpp  main.cpp
